Init class mdtFrameUsbTmc

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -25,6 +25,7 @@ set (SOURCES_FILES
           mdtFrame.cpp
           mdtFrameAscii.cpp
           mdtFrameModbusTcp.cpp
+          mdtFrameUsbTmc.cpp
           mdtTime.cpp
           # Frame codec
           mdtFrameCodec.cpp
