Work on mdtUsbPort* classes
Created a new mdtUsbPortThread class, so port can be handled correctly (init/wait/rw)
Now, mdtUsbPort can only be called from one thread, but code is much much
 easyer, cleaner.

--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -15,6 +15,7 @@ set (HEADER_FILES
           mdtPortWriteThread.h
           mdtTcpSocket.h
           mdtTcpSocketThread.h
+          mdtUsbPortThread.h
           # Port manager
           mdtPortManager.h
           # Port config
@@ -26,6 +27,7 @@ set (SOURCES_FILES
           # Port I/O
           mdtAbstractPort.cpp
           mdtUsbPort.cpp
+          mdtUsbPortThread.cpp
           mdtUsbDeviceDescriptor.cpp
           mdtUsbConfigDescriptor.cpp
           mdtUsbInterfaceDescriptor.cpp
