Working on mdtUsbPort* classes
 - Created a new container for devices discovery (currently experimenting with mdtUsbtmcPortManager)
 - New format for mdtUsbPort's port name

--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -38,6 +38,8 @@ set (SOURCES_FILES
           mdtPortWriteThread.cpp
           mdtTcpSocket.cpp
           mdtTcpSocketThread.cpp
+          mdtPortInfo.cpp
+          mdtDeviceInfo.cpp
           # Port manager
           mdtPortManager.cpp
           mdtUsbtmcPortManager.cpp
