Work on mdtDevice + frame codec SCPI + USBTMC

--- a/src/mdtdevice/CMakeLists.txt
+++ b/src/mdtdevice/CMakeLists.txt
@@ -14,6 +14,7 @@ set (HEADER_FILES
           mdtDeviceWindow.h
           mdtDeviceStatusWidget.h
           mdtDeviceModbus.h
+          mdtDeviceU3606A.h
     )
 
 
@@ -26,6 +27,7 @@ set (SOURCES_FILES
           mdtDeviceWindow.cpp
           mdtDeviceStatusWidget.cpp
           mdtDeviceModbus.cpp
+          mdtDeviceU3606A.cpp
     )
 
 # Liste des fichiers ui
@@ -44,15 +46,13 @@ set (RESOURCE_FILES
 if(UNIX)
   message("${PROJECT_SOURCE_DIR}/linux")
   set (SOURCES_FILES ${SOURCES_FILES} 
-    linux/mdtDeviceU3606A.cpp
-    linux/mdtDeviceU3606AWidget.cpp
+#    linux/mdtDeviceU3606AWidget.cpp
   )
   set (HEADER_FILES ${HEADER_FILES} 
-    linux/mdtDeviceU3606A.h
-    linux/mdtDeviceU3606AWidget.h
+#    linux/mdtDeviceU3606AWidget.h
   )
   set (FORM_FILES ${FORM_FILES}
-    linux/mdtDeviceU3606AWidget.ui
+#    linux/mdtDeviceU3606AWidget.ui
   )
 
 endif(UNIX)
