Add partial Control endpoint support in mdtUsb*

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -30,6 +30,7 @@ set (SOURCES_FILES
           mdtFrameAscii.cpp
           mdtFrameModbusTcp.cpp
           mdtFrameUsbTmc.cpp
+          mdtFrameUsbControl.cpp
           mdtTime.cpp
           # Frame codec
           mdtFrameCodec.cpp
