Workin on 0.2.7 Release
Workin on CMake + CPack with new Debian packagin rules

--- a/src/mdtserialport/CMakeLists.txt
+++ b/src/mdtserialport/CMakeLists.txt
@@ -64,13 +64,13 @@ target_link_libraries(mdtserialport "mdtport")
 target_link_libraries(mdtserialport "mdtutilsgui")
 
 # Version statique
-if(MDT_BUILD_STATIC_LIBS)
-  add_library (mdtserialport_static STATIC ${SOURCES_FILES} )
-  target_link_libraries(mdtserialport_static ${QT_LIBRARIES})
-  target_link_libraries(mdtserialport_static "mdtport")
-  target_link_libraries(mdtserialport_static "mdtutilsgui")
+#if(MDT_BUILD_STATIC_LIBS)
+#  add_library (mdtserialport_static STATIC ${SOURCES_FILES} )
+#  target_link_libraries(mdtserialport_static ${QT_LIBRARIES})
+#  target_link_libraries(mdtserialport_static "mdtport")
+#  target_link_libraries(mdtserialport_static "mdtutilsgui")
   #set_target_properties("mdtutils_static" PROPERTIES OUTPUT_NAME "mdtutils")
-endif(MDT_BUILD_STATIC_LIBS)
+#endif(MDT_BUILD_STATIC_LIBS)
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
@@ -78,6 +78,18 @@ install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtserialport"
 
 # Destinations
 install(TARGETS "mdtserialport" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-if(MDT_BUILD_STATIC_LIBS)
-  install(TARGETS "mdtserialport_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-endif(MDT_BUILD_STATIC_LIBS)
+
+# Strip library and put debug symbols into separate file
+if(UNIX)
+  add_custom_command(TARGET "mdtserialport"
+                    POST_BUILD
+                    COMMAND objcopy --only-keep-debug "${PROJECT_SOURCE_DIR}/libmdtserialport.so" "${PROJECT_SOURCE_DIR}/libmdtserialport.dbg"
+                    COMMAND strip --strip-debug --strip-unneeded "${PROJECT_SOURCE_DIR}/libmdtserialport.so"
+                    COMMAND objcopy --add-gnu-debuglink="libmdtserialport.dbg" "${PROJECT_SOURCE_DIR}/libmdtserialport.so"
+                    COMMAND chmod -x "${PROJECT_SOURCE_DIR}/libmdtserialport.dbg")
+  install(FILES "${PROJECT_SOURCE_DIR}/libmdtserialport.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
+endif(UNIX)
+
+#if(MDT_BUILD_STATIC_LIBS)
+#  install(TARGETS "mdtserialport_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
+#endif(MDT_BUILD_STATIC_LIBS)
