--- a/src/mdttools/CMakeLists.txt
+++ b/src/mdttools/CMakeLists.txt
@@ -62,6 +62,17 @@ install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdttools" COMP
 
 # Destinations
 install(TARGETS "mdttools" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-if(MDT_BUILD_STATIC_LIBS)
-  install(TARGETS "mdttools_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-endif(MDT_BUILD_STATIC_LIBS)
+# if(MDT_BUILD_STATIC_LIBS)
+#   install(TARGETS "mdttools_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
+# endif(MDT_BUILD_STATIC_LIBS)
+
+# Strip library and put debug symbols into separate file
+if(UNIX)
+  add_custom_command(TARGET "mdttools"
+                    POST_BUILD
+                    COMMAND objcopy --only-keep-debug "${PROJECT_SOURCE_DIR}/libmdttools.so" "${PROJECT_SOURCE_DIR}/libmdttools.dbg"
+                    COMMAND strip --strip-debug --strip-unneeded "${PROJECT_SOURCE_DIR}/libmdttools.so"
+                    COMMAND objcopy --add-gnu-debuglink="libmdttools.dbg" "${PROJECT_SOURCE_DIR}/libmdttools.so"
+                    COMMAND chmod -x "${PROJECT_SOURCE_DIR}/libmdttools.dbg")
+  install(FILES "${PROJECT_SOURCE_DIR}/libmdttools.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
+endif(UNIX)
