--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -127,6 +127,17 @@ install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtport" COMPO
 
 # Destinations
 install(TARGETS "mdtport" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-if(MDT_BUILD_STATIC_LIBS)
-  install(TARGETS "mdtport_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-endif(MDT_BUILD_STATIC_LIBS)
+#if(MDT_BUILD_STATIC_LIBS)
+#  install(TARGETS "mdtport_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
+#endif(MDT_BUILD_STATIC_LIBS)
+
+# Strip library and put debug symbols into separate file
+if(UNIX)
+  add_custom_command(TARGET "mdtport"
+                    POST_BUILD
+                    COMMAND objcopy --only-keep-debug "${PROJECT_SOURCE_DIR}/libmdtport.so" "${PROJECT_SOURCE_DIR}/libmdtport.dbg"
+                    COMMAND strip --strip-debug --strip-unneeded "${PROJECT_SOURCE_DIR}/libmdtport.so"
+                    COMMAND objcopy --add-gnu-debuglink="libmdtport.dbg" "${PROJECT_SOURCE_DIR}/libmdtport.so"
+                    COMMAND chmod -x "${PROJECT_SOURCE_DIR}/libmdtport.dbg")
+  install(FILES "${PROJECT_SOURCE_DIR}/libmdtport.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
+endif(UNIX)
