--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -92,11 +92,11 @@ target_link_libraries(mdtutilsgui ${QT_LIBRARIES})
 target_link_libraries(mdtutilsgui "qwt")
 
 # Version statique
-if(MDT_BUILD_STATIC_LIBS)
-  add_library (mdtutilsgui_static STATIC ${SOURCES_FILES} )
-  target_link_libraries(mdtutilsgui_static ${QT_LIBRARIES})
-  set_target_properties("mdtutilsgui_static" PROPERTIES OUTPUT_NAME "mdtutils")
-endif(MDT_BUILD_STATIC_LIBS)
+# if(MDT_BUILD_STATIC_LIBS)
+#   add_library (mdtutilsgui_static STATIC ${SOURCES_FILES} )
+#   target_link_libraries(mdtutilsgui_static ${QT_LIBRARIES})
+#   set_target_properties("mdtutilsgui_static" PROPERTIES OUTPUT_NAME "mdtutils")
+# endif(MDT_BUILD_STATIC_LIBS)
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
@@ -104,6 +104,17 @@ install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtutilsgui" C
 
 # Destinations
 install(TARGETS "mdtutilsgui" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-if(MDT_BUILD_STATIC_LIBS)
-  install(TARGETS "mdtutilsgui_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-endif(MDT_BUILD_STATIC_LIBS)
+#if(MDT_BUILD_STATIC_LIBS)
+#  install(TARGETS "mdtutilsgui_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
+#endif(MDT_BUILD_STATIC_LIBS)
+
+# Strip library and put debug symbols into separate file
+if(UNIX)
+  add_custom_command(TARGET "mdtutilsgui"
+                    POST_BUILD
+                    COMMAND objcopy --only-keep-debug "${PROJECT_SOURCE_DIR}/libmdtutilsgui.so" "${PROJECT_SOURCE_DIR}/libmdtutilsgui.dbg"
+                    COMMAND strip --strip-debug --strip-unneeded "${PROJECT_SOURCE_DIR}/libmdtutilsgui.so"
+                    COMMAND objcopy --add-gnu-debuglink="libmdtutilsgui.dbg" "${PROJECT_SOURCE_DIR}/libmdtutilsgui.so"
+                    COMMAND chmod -x "${PROJECT_SOURCE_DIR}/libmdtutilsgui.dbg")
+  install(FILES "${PROJECT_SOURCE_DIR}/libmdtutilsgui.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
+endif(UNIX)
