--- a/tests/Makefile
+++ b/tests/Makefile
@@ -88,7 +88,7 @@ install/strip/fast: install/strip
 
 # Special rule for the target list_install_components
 list_install_components:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Available install components are: \"dev\" \"lib\" \"tools\""
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Available install components are: \"dbg\" \"dev\" \"lib\" \"tools\""
 .PHONY : list_install_components
 
 # Special rule for the target list_install_components
